syntax = "proto3";
//protoc -I . CRMswap.proto --go_out=plugins=grpc:.

package CRMswap;

service CRMswap {
    rpc A(SF) returns (Response) {}
}

//message SFempty {}

message SF {
    S S = 1;
    F F = 2;
}


message S {
    string Customer_id = 1;
    string Customer_name = 2;
    string Customer_type = 3;
    string Customer_email = 4;
}

message F {
    map<string, string> keyvalue = 1;
}

message Response {
    bool Response = 1;
}